--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </nav>
             <div class="who">
                 <div class="who__img">
-                    <img src="./image/myPhoto.jpg" alt="myPhoto">
+                    <img src="./image/myPhoto.webp" alt="myPhoto">
                 </div>
                 <div class="who__ami">
                     <h1 class="who__ami-name title">Evgeny Roslyakov</h1>
@@ -92,48 +92,21 @@
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
                             <div class="portfolio__item">
-                                <div class="portfolio__item-text">1 страница <br><span>(Flexbox, Adaptive(480,
-                                        768), popup, forms)</span>
+                                <div class="portfolio__item-img"><a href="https://interno.evgenyroslyakov.ru/"
+                                        target="_blank"><img src="./image/interno.webp" loading="lazy"
+                                            alt="Interno.webp"></a>
                                 </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="portfolio__item">
                                 <div class="portfolio__item-img"><a href="https://dogs.evgenyroslyakov.ru/"
-                                        target="_blank"><img src="./image/Dogs.webp" loading="lazy" alt="Dogs.webp"></a>
+                                        target="_blank"><img src="./image/dogs.webp" loading="lazy" alt="Dogs.webp"></a>
                                 </div>
                             </div>
                         </div>
                         <div class="swiper-slide">
                             <div class="portfolio__item">
-                                <div class="portfolio__item-text">1 страница <br><span>(форма, Flexbox)</span>
-                                </div>
-                                <div class="portfolio__item-img"><a href="https://locus.evgenyroslyakov.ru"
-                                        target="_blank"><img src="./image/Locus.webp" loading="lazy"
-                                            alt="Locus.webp"></a></div>
-                            </div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div class="portfolio__item">
-                                <div class="portfolio__item-text">1 страница <br><span>(Flexbox)</span>
-                                </div>
-
-                                <div class="portfolio__item-img"><a href="https://restaurant.evgenyroslyakov.ru"
-                                        target="_blank"><img src="./image/Restaurant.webp" loading="lazy"
-                                            alt="Restaurant.webp"></a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div class="portfolio__item">
-                                <div class="portfolio__item-text">4 страницы <br><span>(слайдер, Flexbox)</span>
-                                </div>
-                                <div class="portfolio__item-img"><a href="https://maya.evgenyroslyakov.ru"
-                                        target="_blank"><img src="./image/Maya.webp" loading="lazy" alt="Maya.webp"></a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div class="portfolio__item">
-                                <div class="portfolio__item-text">1 страница <br><span>(адаптив
-                                        (480,768),слайдер,popup,forms,burger-menu)</span>
-                                </div>
                                 <div class="portfolio__item-img"><a href="https://service.evgenyroslyakov.ru"
                                         target="_blank"><img src="./image/Service.webp" loading="lazy"
                                             alt="Service.webp"></a>
@@ -142,20 +115,30 @@
                         </div>
                         <div class="swiper-slide">
                             <div class="portfolio__item">
-                                <div class="portfolio__item-text">1 страница <br><span>(popup)</span>
-                                </div>
-                                <div class="portfolio__item-img"><a href="https://school.evgenyroslyakov.ru/"><img
-                                            src="./image/school.webp" loading="lazy" alt="School.webp"></a>
+                                <div class="portfolio__item-img"><a href="https://locus.evgenyroslyakov.ru"
+                                        target="_blank"><img src="./image/Locus.webp" loading="lazy"
+                                            alt="Locus.webp"></a></div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="portfolio__item">
+                                <div class="portfolio__item-img"><a href="https://restaurant.evgenyroslyakov.ru"
+                                        target="_blank"><img src="./image/Restaurant.webp" loading="lazy"
+                                            alt="Restaurant.webp"></a>
                                 </div>
                             </div>
                         </div>
                         <div class="swiper-slide">
                             <div class="portfolio__item">
-                                <div class="portfolio__item-text">1 страница <br><span>(Flexbox, легкая анимация)</span>
+                                <div class="portfolio__item-img"><a href="https://maya.evgenyroslyakov.ru"
+                                        target="_blank"><img src="./image/Maya.webp" loading="lazy" alt="Maya.webp"></a>
                                 </div>
-                                <div class="portfolio__item-img"><a href="https://interno.evgenyroslyakov.ru/"
-                                        target="_blank"><img src="./image/interno.webp" loading="lazy"
-                                            alt="Interno.webp"></a>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="portfolio__item">
+                                <div class="portfolio__item-img"><a href="https://school.evgenyroslyakov.ru/"><img
+                                            src="./image/school.webp" loading="lazy" alt="School.webp"></a>
                                 </div>
                             </div>
                         </div>
