--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="eng">
 
 <head>
     <meta charset="UTF-8">
@@ -92,6 +92,14 @@
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
                             <div class="portfolio__item">
+                                <div class="portfolio__item-img"><a href="https://beauty.evgenyroslyakov.ru/"
+                                        target="_blank"><img src="./image/beauty.webp" loading="lazy"
+                                            alt="Beauty.webp"></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="portfolio__item">
                                 <div class="portfolio__item-img"><a href="https://interno.evgenyroslyakov.ru/"
                                         target="_blank"><img src="./image/interno.webp" loading="lazy"
                                             alt="Interno.webp"></a>
@@ -137,8 +145,9 @@
                         </div>
                         <div class="swiper-slide">
                             <div class="portfolio__item">
-                                <div class="portfolio__item-img"><a href="https://school.evgenyroslyakov.ru/"><img
-                                            src="./image/school.webp" loading="lazy" alt="School.webp"></a>
+                                <div class="portfolio__item-img"><a href="https://school.evgenyroslyakov.ru/"
+                                        target="_blank"><img src="./image/school.webp" loading="lazy"
+                                            alt="School.webp"></a>
                                 </div>
                             </div>
                         </div>
