--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                         <div class="swiper-slide">
                             <div class="portfolio__item">
                                 <div class="portfolio__item-img"><a href="https://service.evgenyroslyakov.ru"
-                                        target="_blank"><img src="./image/Service.webp" loading="lazy"
+                                        target="_blank"><img src="./image/service.webp" loading="lazy"
                                             alt="Service.webp"></a>
                                 </div>
                             </div>
@@ -124,14 +124,14 @@
                         <div class="swiper-slide">
                             <div class="portfolio__item">
                                 <div class="portfolio__item-img"><a href="https://locus.evgenyroslyakov.ru"
-                                        target="_blank"><img src="./image/Locus.webp" loading="lazy"
+                                        target="_blank"><img src="./image/locus.webp" loading="lazy"
                                             alt="Locus.webp"></a></div>
                             </div>
                         </div>
                         <div class="swiper-slide">
                             <div class="portfolio__item">
                                 <div class="portfolio__item-img"><a href="https://restaurant.evgenyroslyakov.ru"
-                                        target="_blank"><img src="./image/Restaurant.webp" loading="lazy"
+                                        target="_blank"><img src="./image/restaurant.webp" loading="lazy"
                                             alt="Restaurant.webp"></a>
                                 </div>
                             </div>
@@ -139,7 +139,7 @@
                         <div class="swiper-slide">
                             <div class="portfolio__item">
                                 <div class="portfolio__item-img"><a href="https://maya.evgenyroslyakov.ru"
-                                        target="_blank"><img src="./image/Maya.webp" loading="lazy" alt="Maya.webp"></a>
+                                        target="_blank"><img src="./image/maya.webp" loading="lazy" alt="Maya.webp"></a>
                                 </div>
                             </div>
                         </div>
