--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="eng">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -10,9 +10,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Titan+One&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/e371c51c98.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./css/swiper-bundle.css">
-    <title>Portfolio</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="./image/myFavicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./image/myFavicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./image/myFavicon/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <title>Evgeny Roslyakov</title>
 </head>
 
 <body>
@@ -20,22 +23,13 @@
     <header class="header" id="main">
         <div class="container">
             <nav>
-                <div class="header__navbar">
-                    <li class="list-item"><i class="fa-solid fa-house fa-3x"></i>
-                        <span class="list-item-name"><a href="#">Home</a></span>
-                    </li>
-                    <li class="list-item">
-                        <i class="fa-sharp fa-solid fa-dumbbell fa-3x"></i>
-                        <span class="list-item-name"><a href="#skills">Skills</a></span>
-                    </li>
-                    <li class="list-item">
-                        <i class="fa-solid fa-user fa-3x"></i>
-                        <span class="list-item-name"><a href="#portfolio">Portfolio</a></span>
-                    </li>
-                    <li class="list-item">
-                        <i class="fa-solid fa-phone fa-3x"></i>
-                        <span class="list-item-name"><a href="#contacts">Contacts</a></span>
-                    </li>
+                <div class="header__nav">
+                    <ul class="header__list">
+                        <li class="header__item"><a href="#!">Home</a></li>
+                        <li class="header__item"><a href="#skills">Skills</a></li>
+                        <li class="header__item"><a href="#portfolio">Portfolio</a></li>
+                        <li class="header__item"><a href="#contacts">Contacts</a></li>
+                    </ul>
                 </div>
             </nav>
             <div class="who">
@@ -62,24 +56,26 @@
             <div class="skills__items">
                 <div class="skills__item">
                     <div class="skills__item-title"></div>
-                    <div class="skills__item-img"><img src="./image/html.svg" alt="html.svg"></div>
-                    <div class="skills__item-text">4/5</div>
+                    <div class="skills__item-img" title="HTML"><img src="./image/html.svg" alt="html"></div>
                 </div>
                 <div class="skills__item">
-                    <div class="skills__item-img"><img src="./image/css.svg" alt="css.svg"></div>
-                    <div class="skills__item-text">4/5</div>
+                    <div class="skills__item-img" title="CSS"><img src="./image/css.svg" alt="css"></div>
                 </div>
                 <div class="skills__item">
-                    <div class="skills__item-img"><img src="./image/figma.svg" alt="figma.svg"></div>
-                    <div class="skills__item-text">3/3</div>
+                    <div class="skills__item-img" title="Figma"><img src="./image/figma.svg" alt="figma"></div>
                 </div>
                 <div class="skills__item">
-                    <div class="skills__item-img"><img src="./image/sass.svg" alt="sass.svg"></div>
-                    <div class="skills__item-text">3/5</div>
+                    <div class="skills__item-img" title="SCSS"><img src="./image/sass.svg" alt="sass"></div>
                 </div>
                 <div class="skills__item skills__item_center">
-                    <div class="skills__item-img"><img src="./image/git.svg" alt="git.svg"></div>
-                    <div class="skills__item-text">2/5</div>
+                    <div class="skills__item-img" title="Git"><img src="./image/git.svg" alt="git"></div>
+                </div>
+                <div class="skills__item skills__item_center">
+                    <div class="skills__item-img" title="Bootstrap"><img src="./image/bootstrap.svg" alt="bootstrap">
+                    </div>
+                </div>
+                <div class="skills__item skills__item_center">
+                    <div class="skills__item-img" title="Tailwind"><img src="./image/tailwind.svg" alt="tailwind"></div>
                 </div>
             </div>
         </div>
@@ -87,7 +83,7 @@
     <section class="portfolio" id="portfolio">
         <h2 class="portfolio__title title">Portfolio</h2>
         <div class="container">
-            <div class="portfolio__items">
+            <div class="portfolio__items" id="scroll">
                 <div class="swiper">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
@@ -188,7 +184,6 @@
 
     <script src="./swiper-bundle.js"></script>
     <script src="./main.js"></script>
-
 </body>
 
 </html>
