--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Titan+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/swiper-bundle.css">
-    <link rel="apple-touch-icon" sizes="180x180" href="./image/myFavicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="./image/myFavicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="./image/myFavicon/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
+    <link rel="manifest" href="./site.webmanifest">
     <title>Evgeny Roslyakov</title>
 </head>
 
