--- a/index.html
+++ b/index.html
@@ -67,14 +67,17 @@
                 <div class="skills__item">
                     <div class="skills__item-img" title="SCSS"><img src="./image/sass.svg" alt="sass"></div>
                 </div>
-                <div class="skills__item skills__item_center">
+                <div class="skills__item ">
                     <div class="skills__item-img" title="Git"><img src="./image/git.svg" alt="git"></div>
                 </div>
-                <div class="skills__item skills__item_center">
+                <div class="skills__item ">
+                    <div class="skills__item-img" title="Git"><img src="./image/gulp.svg" alt="gulp"></div>
+                </div>
+                <div class="skills__item ">
                     <div class="skills__item-img" title="Bootstrap"><img src="./image/bootstrap.svg" alt="bootstrap">
                     </div>
                 </div>
-                <div class="skills__item skills__item_center">
+                <div class="skills__item ">
                     <div class="skills__item-img" title="Tailwind"><img src="./image/tailwind.svg" alt="tailwind"></div>
                 </div>
             </div>
