add: light animation

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <section class="skills" id="skills">
         <div class=" container">
             <div class="skills__discription">
-                <h2 class="skills__title title">Skills</h2>
+                <h2 class="skills__title title title__animation">Skills</h2>
             </div>
             <div class="skills__items">
                 <div class="skills__item">
@@ -84,7 +84,7 @@
         </div>
     </section>
     <section class="portfolio" id="portfolio">
-        <h2 class="portfolio__title title">Portfolio</h2>
+        <h2 class="portfolio__title title title__animation">Portfolio</h2>
         <div class="container">
             <div class="portfolio__items" id="scroll">
                 <div class="swiper">
@@ -163,7 +163,7 @@
         </div>
     </section>
     <section class="contacts" id="contacts">
-        <h2 class="contacts__title title">Contacts</h2>
+        <h2 class="contacts__title title title__animation">Contacts</h2>
         <div class="container">
             <div class="contacts__list">
                 <div class="contacts__item"><a target="_blank" title="Github" href="https://github.com/Bamser"><img
