--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </nav>
             <div class="who">
                 <div class="who__img">
-                    <img src="./image/myPhoto.webp" alt="myPhoto">
+                    <img src="./image/Myphoto.webp" alt="myPhoto">
                 </div>
                 <div class="who__ami">
                     <h1 class="who__ami-name title">Evgeny Roslyakov</h1>
