--- a/index.html
+++ b/index.html
@@ -168,13 +168,11 @@
                 <div class="contacts__item"><a target="_blank" title="Github" href="https://github.com/Bamser"><img
                             src="./image/github.svg" alt="github.svg"></a>
                 </div>
-                <div class="contacts__item"><a target="_blank" title="vk.com" href="https://vk.com/id160131378"><img
-                            src="./image/vk.svg" alt="email.svg"></a>
-                </div>
+
                 <div class="contacts__item"><a target="_blank" title="telegram"
                         href=" https://telegram.me/bamserok"><img src="./image/telegram.svg" alt="telegram.svg"></a>
                 </div>
-                <div class="contacts__item"><a target="_blank" title="telegram" href="https://wa.me/79262890901"><img
+                <div class="contacts__item"><a target="_blank" title="whatsapp" href="https://wa.me/79262890901"><img
                             src="./image/whatsapp.svg" alt="whatsapp.svg"></a>
                 </div>
                 <div class="contacts__item"><a title="email" href="mailto:bamser@mail.ru"><img src="./image/email.svg"
