add new project

--- a/index.html
+++ b/index.html
@@ -98,6 +98,14 @@
                         </div>
                         <div class="swiper-slide">
                             <div class="portfolio__item">
+                                <div class="portfolio__item-img"><a href="https://shop-tech.evgenyroslyakov.ru/"
+                                        target="_blank"><img src="./image/shop-tech.webp" loading="lazy"
+                                            alt="shop-tech"></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="portfolio__item">
                                 <div class="portfolio__item-img"><a href="https://interno.evgenyroslyakov.ru/"
                                         target="_blank"><img src="./image/interno.webp" loading="lazy"
                                             alt="Interno.webp"></a>
@@ -169,8 +177,8 @@
                             src="./image/github.svg" alt="github.svg"></a>
                 </div>
 
-                <div class="contacts__item"><a target="_blank" title="telegram"
-                        href=" https://telegram.me/bamserok"><img src="./image/telegram.svg" alt="telegram.svg"></a>
+                <div class="contacts__item"><a target="_blank" title="telegram" href="https://telegram.me/bamserok"><img
+                            src="./image/telegram.svg" alt="telegram.svg"></a>
                 </div>
                 <div class="contacts__item"><a target="_blank" title="whatsapp" href="https://wa.me/79262890901"><img
                             src="./image/whatsapp.svg" alt="whatsapp.svg"></a>
