--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
                     <div class="skills__item-img" title="CSS"><img src="./image/css.svg" alt="css"></div>
                 </div>
                 <div class="skills__item">
+                    <div class="skills__item-img" title="JavaScript"><img src="./image/javascript.svg" alt="JavaScript">
+                    </div>
+                </div>
+                <div class="skills__item">
                     <div class="skills__item-img" title="Figma"><img src="./image/figma.svg" alt="figma"></div>
                 </div>
                 <div class="skills__item">
