--- a/index.html
+++ b/index.html
@@ -102,6 +102,14 @@
                         </div>
                         <div class="swiper-slide">
                             <div class="portfolio__item">
+                                <div class="portfolio__item-img"><a href="https://anabol.evgenyroslyakov.ru/"
+                                        target="_blank"><img src="./image/anabol.webp" loading="lazy"
+                                            alt="shop-tech"></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="portfolio__item">
                                 <div class="portfolio__item-img"><a href="https://shop-tech.evgenyroslyakov.ru/"
                                         target="_blank"><img src="./image/shop-tech.webp" loading="lazy"
                                             alt="shop-tech"></a>
