--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
@@ -33,13 +33,17 @@
             </nav>
             <div class="who">
                 <div class="who__img">
-                    <img src="./image/Myphoto.webp" alt="myPhoto">
+                    <img src="./image/Myphoto.png" alt="myPhoto">
                 </div>
                 <div class="who__ami">
                     <h1 class="who__ami-name title">Evgeny Roslyakov</h1>
-                    <p class="who__ami-text text">Приветствую на своей страничке! Я занимаюсь версткой сайтов, живу в
-                        Москве.
-                        Постоянно развиваюсь и осваиваю новые технологии.
+                    <p class="who__ami-text text">Здравствуйте. У меня есть опыт работы с версткой — я уверенно работаю
+                        с HTML, CSS и адаптивным дизайном, создавая аккуратные и удобные интерфейсы. Сейчас я активно
+                        изучаю JavaScript, чтобы расширить свои навыки и стать полноценным фронтенд-разработчиком.
+                        Я увлечён созданием веб-продуктов, которые радуют пользователей своей простотой и
+                        функциональностью. Самостоятельно освоил основы JavaScript, включая работу с DOM и базовые
+                        принципы программирования, и продолжаю углублять знания через практику и онлайн-курсы. Мне
+                        нравится разбираться в новых технологиях и применять их на деле.
                     </p>
                 </div>
 
@@ -73,16 +77,6 @@
                 <div class="skills__item ">
                     <div class="skills__item-img" title="Git"><img src="./image/git.svg" alt="git"></div>
                 </div>
-                <div class="skills__item ">
-                    <div class="skills__item-img" title="Git"><img src="./image/gulp.svg" alt="gulp"></div>
-                </div>
-                <div class="skills__item ">
-                    <div class="skills__item-img" title="Bootstrap"><img src="./image/bootstrap.svg" alt="bootstrap">
-                    </div>
-                </div>
-                <div class="skills__item ">
-                    <div class="skills__item-img" title="Tailwind"><img src="./image/tailwind.svg" alt="tailwind"></div>
-                </div>
             </div>
         </div>
     </section>
@@ -94,87 +88,86 @@
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
                             <div class="portfolio__item">
-                                <div class="portfolio__item-img"><a href="https://beauty.evgenyroslyakov.ru/"
-                                        target="_blank"><img src="./image/beauty.webp" loading="lazy"
-                                            alt="Beauty.webp"></a>
+                                <div class="portfolio__item-img"><img src="./image/Headphones.webp" loading="lazy"
+                                        alt="Headphones">
                                 </div>
                             </div>
                         </div>
                         <div class="swiper-slide">
                             <div class="portfolio__item">
-                                <div class="portfolio__item-img"><a href="https://anabol.evgenyroslyakov.ru/"
-                                        target="_blank"><img src="./image/anabol.webp" loading="lazy"
-                                            alt="shop-tech"></a>
+                                <div class="portfolio__item-img"><img src="./image/beauty.webp" loading="lazy"
+                                        alt="Beauty.webp">
                                 </div>
                             </div>
                         </div>
                         <div class="swiper-slide">
                             <div class="portfolio__item">
-                                <div class="portfolio__item-img"><a href="https://shop-tech.evgenyroslyakov.ru/"
-                                        target="_blank"><img src="./image/shop-tech.webp" loading="lazy"
-                                            alt="shop-tech"></a>
+                                <div class="portfolio__item-img"><img src="./image/anabol.webp" loading="lazy"
+                                        alt="shop-tech">
                                 </div>
                             </div>
                         </div>
                         <div class="swiper-slide">
                             <div class="portfolio__item">
-                                <div class="portfolio__item-img"><a href="https://interno.evgenyroslyakov.ru/"
-                                        target="_blank"><img src="./image/interno.webp" loading="lazy"
-                                            alt="Interno.webp"></a>
+                                <div class="portfolio__item-img"><img src="./image/shop-tech.webp" loading="lazy"
+                                        alt="shop-tech">
                                 </div>
                             </div>
                         </div>
                         <div class="swiper-slide">
                             <div class="portfolio__item">
-                                <div class="portfolio__item-img"><a href="https://dogs.evgenyroslyakov.ru/"
-                                        target="_blank"><img src="./image/dogs.webp" loading="lazy" alt="Dogs.webp"></a>
+                                <div class="portfolio__item-img"><img src="./image/interno.webp" loading="lazy"
+                                        alt="Interno.webp">
                                 </div>
                             </div>
                         </div>
                         <div class="swiper-slide">
                             <div class="portfolio__item">
-                                <div class="portfolio__item-img"><a href="https://service.evgenyroslyakov.ru"
-                                        target="_blank"><img src="./image/service.webp" loading="lazy"
-                                            alt="Service.webp"></a>
+                                <div class="portfolio__item-img"><img src="./image/dogs.webp" loading="lazy"
+                                        alt="Dogs.webp">
                                 </div>
                             </div>
                         </div>
                         <div class="swiper-slide">
                             <div class="portfolio__item">
-                                <div class="portfolio__item-img"><a href="https://locus.evgenyroslyakov.ru"
-                                        target="_blank"><img src="./image/locus.webp" loading="lazy"
-                                            alt="Locus.webp"></a></div>
-                            </div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div class="portfolio__item">
-                                <div class="portfolio__item-img"><a href="https://restaurant.evgenyroslyakov.ru"
-                                        target="_blank"><img src="./image/restaurant.webp" loading="lazy"
-                                            alt="Restaurant.webp"></a>
+                                <div class="portfolio__item-img"><img src="./image/service.webp" loading="lazy"
+                                        alt="Service.webp">
                                 </div>
                             </div>
                         </div>
                         <div class="swiper-slide">
                             <div class="portfolio__item">
-                                <div class="portfolio__item-img"><a href="https://maya.evgenyroslyakov.ru"
-                                        target="_blank"><img src="./image/maya.webp" loading="lazy" alt="Maya.webp"></a>
+                                <div class="portfolio__item-img"><img src="./image/locus.webp" loading="lazy"
+                                        alt="Locus.webp"></div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="portfolio__item">
+                                <div class="portfolio__item-img"><img src="./image/restaurant.webp" loading="lazy"
+                                        alt="Restaurant.webp">
                                 </div>
                             </div>
                         </div>
                         <div class="swiper-slide">
                             <div class="portfolio__item">
-                                <div class="portfolio__item-img"><a href="https://school.evgenyroslyakov.ru/"
-                                        target="_blank"><img src="./image/school.webp" loading="lazy"
-                                            alt="School.webp"></a>
+                                <div class="portfolio__item-img"><img src="./image/maya.webp" loading="lazy"
+                                        alt="Maya.webp">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="portfolio__item">
+                                <div class="portfolio__item-img"><img src="./image/school.webp" loading="lazy"
+                                        alt="School.webp">
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="swiper__buttons swiper-button-left">
-                        <img src="./image/arrow-circle-left.svg" alt="arrow-left">
+                        <img src="./image/arrow-circle-left.svg" alt="Previous slide">
                     </div>
                     <div class="swiper__buttons swiper-button-right">
-                        <img src="./image/arrow-circle-right.svg" alt="arrrow-right">
+                        <img src="./image/arrow-circle-right.svg" alt="Next slide">
                     </div>
 
                 </div>
