--- a/index.html
+++ b/index.html
@@ -37,14 +37,18 @@
                 </div>
                 <div class="who__ami">
                     <h1 class="who__ami-name title">Evgeny Roslyakov</h1>
-                    <p class="who__ami-text text">Здравствуйте. У меня есть опыт работы с версткой — я уверенно работаю
-                        с HTML, CSS и адаптивным дизайном, создавая аккуратные и удобные интерфейсы. Сейчас я активно
-                        изучаю JavaScript, чтобы расширить свои навыки и стать полноценным фронтенд-разработчиком.
-                        Я увлечён созданием веб-продуктов, которые радуют пользователей своей простотой и
-                        функциональностью. Самостоятельно освоил основы JavaScript, включая работу с DOM и базовые
-                        принципы программирования, и продолжаю углублять знания через практику и онлайн-курсы. Мне
-                        нравится разбираться в новых технологиях и применять их на деле.
-                    </p>
+                    <button class="who__toggle-btn">Обо мне</button>
+                    <div class="who__ami-content">
+                        <p class="who__ami-text text">
+                            Здравствуйте. У меня есть опыт работы с версткой — я уверенно работаю с HTML, CSS и
+                            адаптивным дизайном, создавая аккуратные и удобные интерфейсы. Сейчас я активно изучаю
+                            JavaScript, чтобы расширить свои навыки и стать полноценным фронтенд-разработчиком. Я
+                            увлечён созданием веб-продуктов, которые радуют пользователей своей простотой и
+                            функциональностью. Самостоятельно освоил основы JavaScript, включая работу с DOM и базовые
+                            принципы программирования, и продолжаю углублять знания через практику и онлайн-курсы. Мне
+                            нравится разбираться в новых технологиях и применять их на деле.
+                        </p>
+                    </div>
                 </div>
 
             </div>
