add: portfolio-project

--- a/index.html
+++ b/index.html
@@ -87,6 +87,9 @@
     <section class="portfolio" id="portfolio">
         <h2 class="portfolio__title title title__animation">Portfolio</h2>
         <div class="container">
+            <div class="portfolio__links">
+                <a class="portfolio__link" href="https://todo.bamser.ru/" target="_blank">Список дел</a>
+            </div>
             <div class="portfolio__items" id="scroll">
                 <div class="swiper">
                     <div class="swiper-wrapper">
